# bevy_novelgame_dialog

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  log.txt
.cargo/: config.toml
.github/: release-drafter.yml
.github/workflows/: bevy_ci.yml  release-drafter.yml  rust.yml
assets/fonts/noto/: README.txt
assets/fonts/赤薔薇/: readme.txt
assets/models/: girl.glb  rabit.glb  room.glb
assets/scripts/: basic.bdt  basic.csv  choice_example.md  choice_example_jp.md  explain01.md  explain02.md  reload_test.bds  reload_test.md  rpg_style.csv  starter.md  test.bds  test.bdt  test.bms  test.bms.bak  test.bmt  test.csv
examples/: basic_sample.rs  fox_background.rs  girl_and_rabit.rs  scaling_parts.rs
src/: debug.rs  fox_background.rs  lib.rs  main.rs  read_script.rs  utility.rs
src/dialog_box/: bds_event.rs  debug.rs  input.rs  mod.rs  setup.rs
src/dialog_box/public/: components.rs  configs.rs  mod.rs
src/dialog_box/public_events/: bds_event.rs  mod.rs
src/dialog_box/text_conroller/: feed_animation.rs  mod.rs  typing_animations.rs
src/dialog_box/text_controller/: feed_animation.rs  mod.rs  typing_animations.rs
src/dialog_box/window_controller/: choice.rs  mod.rs  popup.rs  sinkdown.rs  waiting.rs
src/message_window/: bms_event.rs  input.rs  message_writer.rs  mod.rs  page_scroller.rs  setup.rs  window_controller.rs
src/message_window/message_writer/: feed_animation.rs  mod.rs  (+2 more)
src/read_script/: mod.rs  parse_bds.rs  parse_bms.rs  regex.rs
src/ui_templates/: fantasy_style.rs  mod.rs  rpg_style.rs
src/writing/: input.rs  mod.rs  setup.rs
(+38 files in other folders)
