[package]
name = "bevy_message_window"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ab_glyph = "0.2.21"
serde = "1"
ron = "0.8.0"
nom = "7.1.3"
regex = "1.8.4"

#bevy
bevy = "0.11.0"
