[package]
name = "bevy_novelgame_dialog"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rustybuzz = "=0.7.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8.0"
nom = "7.1.3"
regex = "1.8.4"
blake3 = { version = "1.5", features=["pure"] }

#bevy
bevy = "0.16.0"
thiserror = "1.0"
